--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,24 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style type="text/css">
+      body {
+          font: 10pt sans;
+      }
+
+      #mynetwork {
+          width: 600px;
+          height: 600px;
+          border: 1px solid lightgray;
+      }
+  </style>
+  <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
+  
   </head>
   <body>
+    <button id="btn1" onclick="a()">d1</button>
+    <button id="btn2" onclick="b()">d2</button>
     <div id="root1"></div>
-    <div id="root2"></div>
-    <textarea id="salida"></textarea>
+    <div id="mynetwork"></div>
   </body>
 </html>
